# gazebo_sim_moos_ivp

./: .gitignore  README.md  clean.sh
cora_description/: package.xml
cora_description/urdf_champ/: cora.urdf.xacro  cora.xacro  cora.xacro.orig  macros.xacro
heron_description/urdf/: base.xacro  sensors.xacro  snippets.xacro
moos_gazebo/: CMakeLists.txt  README.md  package.xml
moos_gazebo/config/cora/: cora.urdf.xacro  cora.xacro  cora_3d_lidar.xacro  cora_april.xacro  cora_aruco.xacro  cora_camera.xacro  cora_dynamics_plugin.xacro  cora_gps.xacro  cora_imu.xacro  cora_p3d.xacro  cora_thruster_config.xacro  lidar.xacro  macros.xacro  thrusters.xacro
moos_gazebo/config/heron/: heron.urdf.xacro  heron.xacro  heron_aruco.xacro  heron_base.xacro  heron_camera.xacro  heron_dynamics_plugin.xacro  heron_gps.xacro  heron_imu.xacro  heron_p3d.xacro  heron_thruster_config.xacro  lidar.xacro  macros.xacro  thrusters.xacro
moos_gazebo/config/heron_dev/: heron.urdf.xacro  heron.xacro
moos_gazebo/config/wamv/: component_config.xacro  component_config.yaml  wamv.urdf  wamv.xacro  wamv_base.urdf.xacro  wamv_base.urdf.xacro.orig
moos_gazebo/config/wamv/components/: april.xacro  camera.xacro  component_macros.xacro  gps.xacro  imu.xacro  lidar.xacro  no_component_macros.xacro  radar.xacro
moos_gazebo/launch/: cora.launch  heron.launch  mit-SP.launch  mit-SP_hello-world.launch  mit-SP_multi-robot.launch  wamv.launch  world.launch
moos_gazebo/worlds/: mit_SP.world
moos_gazebo_nodes/: CMakeLists.txt  README.md  package.xml
moos_gazebo_nodes/scripts/: compose_contact_report.py  desired_to_thrust.py  publish_robot_data.py  thrust_vessel.py
punch_gazebo/: CMakeLists.txt  package.xml
punch_gazebo/launch/: marina.launch
punch_gazebo/models/aruco_marker/: README.md  marker.material  model.config  model.material  model.sdf
punch_gazebo/models/aruco_marker/marker_5/scripts/: marker.material
punch_gazebo/models/charuco_marker/: model.sdf
punch_gazebo/worlds/: clean.sh  marina.world.xacro  mit_SP.world  oak_island.world
punch_gazebo/worlds/cmu/: empty_world_ships_gazebo.world  empty_world_ships_gazebo1.world  empty_world_ships_gazebo2.world
vrx_gazebo/: CMakeLists.txt
vrx_gazebo/config/wamv_config/: example_component_config.xacro
vrx_gazebo/nodes/: quat2rpy.py
vrx_gazebo/src/vrx_gazebo/: configure_wamv.py
vrx_gazebo/worlds/: example_course.world.xacro  sydneyregatta.xacro
wamv_gazebo/config/: rviz_vrx.rviz
wamv_gazebo/models/gps/mesh/: gps.dae
wamv_gazebo/urdf/: macros.xacro
wamv_gazebo/urdf/components/: lidar.xacro  radar.xacro  wamv_radar.xacro
wave_gazebo_plugins/: CMakeLists.txt
