<?xml version="1.0"?>
<package format="2">
  <name>cora_description</name>
  <version>0.0.0</version>
  <description>URDF model of CoRa (Common Raft), a hypothetical surface vehicle designed by OSRF. This model is modified model the sensor package onboard RoboWhaler</description>

  <maintainer email="mikedef@mit.edu">mikedef</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>wamv_gazebo</depend>
  <depend>xacro</depend>
  
</package>
